# IHF-DFL

./: .gitattributes  .gitignore  CLAUDE.md  README openFL.md  README.md  foundry.toml  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  torchTest.py
.claude/: settings.local.json
analysis/: ExperimentLogger.py  README.md  __init__.py  aggregations.py  analysis-1.ipynb  analysis-2.ipynb  analysis.ipynb  inspect.ipynb  loader.py  plots.py  run_analysis.py  test_data.pkl  transform.py  uuid_extractor.py
analysis/notebooks/: analysis-1.ipynb  analysis-2.ipynb  analysis-3.ipynb  analysis.ipynb  inspect.ipynb
analysis/test/: analysis-1.ipynb  analysis-2.ipynb  analysis-3.ipynb
artifacts/build-info/: solc-0_8_9-3d6d4f7007097388aa0f46b37a6707d2fb8ebaa5.json  solc-0_8_9-3d6d4f7007097388aa0f46b37a6707d2fb8ebaa5.output.json  solc-0_8_9-543047d9b91cecc9564eb5f047e29f488de2e971.json  solc-0_8_9-543047d9b91cecc9564eb5f047e29f488de2e971.output.json  solc-0_8_9-8cc29ed4b8e622aefa607b9f933eb2897af3de90.json  solc-0_8_9-8cc29ed4b8e622aefa607b9f933eb2897af3de90.output.json  solc-0_8_9-fe7598b0faa7efa44a470ebb24b2d4d5b6bf2209.json  solc-0_8_9-fe7598b0faa7efa44a470ebb24b2d4d5b6bf2209.output.json
cache/: compile-cache.json
config/: config.yaml
contracts/: OpenFLManager.sol  OpenFLModel.sol  OpenFLModelNew.sol.Bac
contracts/harnesses/: OpenFLManager_NobodyIsKicked.sol  OpenFLModelHarness.sol  OpenFLModel_NobodyIsKicked.sol
contracts/test/: OpenFLManager_nobody_is_kicked.sol  OpenFLModelHarness.sol  OpenFLModel_nobody_is_kicked.sol
data/: seeds.py
experiment/: experiment_configuration.py  experiment_presets.py  experiment_runner.py  experiments.py  helper.py  sample.py
foundry/: foundry.toml
scripts/: Accuracy&Lossos.ipynb  compile_contracts.py  processData.py
scripts/parser/: __init__.py  experiment_specs.py  gasCosts.py  parseExports.py  parser.py  participant.py  round.py  selector.py
src/api/: connection_helper.py
src/contracts/: contribution.py  fl_challenge.py  fl_manager.py  logging.py
src/ml/: aggregation.py  attacks.py  cnn_models.py  data.py  evaluation.py  execution.py  participant.py  pytorch_model.py  runtime.py  training.py  visualization.py
src/utils/: __init__.py  aggregation_strategy_parser.py  async_writer.py  config.py  printer.py  require_env.py  shapley.py
test/: .Counter copy.ts.bac  Counter.ts  countByteCodeSize.js
tests/: analysis_helpers.py  conftest.py  test_forge.py
tests/integration/: test_contribution_scoring_integration.py  test_experiment_runner_integration.py
tests/jupyter/: Accuracy&Lossos.ipynb  aggregation_rules.ipynb
tests/solidity/: contribution_scoring.t.sol  evaluation_voting.t.sol  feedback_array.t.sol  model_harness.t.sol  no_ether_lost.t.sol  settle_internals.t.sol
tests/unit/: conftest.py  test_analysis_aggregations.py  test_analysis_loader.py  test_analysis_logger.py  test_analysis_plots.py  test_analysis_transform.py  test_api_connection_helper.py  test_contracts_fl_manager.py  test_experiment_configuration.py  test_experiment_runner.py  test_experiments_script.py  test_fl_challenge.py  test_ml_aggregation.py  test_ml_attacks.py  test_ml_pytorch_model.py  test_scripts_compile_contracts.py  test_utils_config.py  test_utils_printer.py  test_utils_require_env.py  test_uuid_extractor.py
types/ethers-contracts/: OpenFLManager.ts  OpenFLModel.ts  hardhat.d.ts  index.ts
(+57 files in other folders)
