[project]
name = "IHP-DFL"
version = "2.0.0"
description = "IHP-DFL"
readme = "README.md"
requires-python = "==3.10.*"
license = { text = "MIT" }

# requirements
dependencies = [
  "torch==2.11.0",
  "torchvision==0.26.0",
  "numpy==2.2.6",
  "web3==7.14.0",
  "termcolor==3.1.0",
  "matplotlib==3.10.7",
  "eth-abi==5.2.0",
  "pandas==2.3.3",
  "py-solc-x >= 2.0.5",
  "python-dotenv==1.2.1",
  "pytest==9.0.1",
  "psutil==6.1.0",
  "jsonpickle"
]

# Dev-only tools (notebooks, testing, formatting, etc.)
[project.optional-dependencies]
dev = [
  "jupyter==1.1.1",
  "jupyterlab==4.4.10",
  "ipykernel",
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "nbstripout"
]

ci = [
  "pytest",
]

[tool.coverage.run]
source_pkgs = ["ml", "api", "contracts", "utils", "experiment", "scripts"]
omit = [
    "*/ml/cnn_models.py",
    "*/ml/participant.py",
    "*/ml/runtime.py",
    "*/ml/training.py",
    "*/ml/visualization.py",
    "*/ml/attacks.py",
    "*/ml/execution.py",
    "*/contracts/logging.py",
    "contracts/harnesses/*",
    "experiment/experiment_presets.py",
    "experiment/helper.py",
    "*/utils/shapley.py"
]



[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "pragma: openfl",   # legacy openfl code
  "pragma: p9",       # P9-era code
  "pragma: p10",      # P10-era code (probably keep covered, but available)
  "pragma: unknown"   # Unknown origin
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src", "tests"]
addopts = "-m 'not slow'"
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
  where = ["src"]
